--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,11 @@
-# Logs
-logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
-
+# Dependencies
 node_modules
+
+# Build outputs
 dist
 dist-ssr
-*.local
-
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
-.DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+build
+out
 
 # Environment variables
 .env
@@ -30,19 +14,24 @@ dist-ssr
 .env.test.local
 .env.production.local
 
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+*.sw?
+
 # OS generated files
 Thumbs.db
 .DS_Store
 
-# Build files
-build/
-out/
+# Logs
+logs
+*.log
 
 # Testing
-coverage/
-.nyc_output/
+coverage
 
 # Temporary files
 *.tmp
 *.temp
-.cache/
+.cache
