--- a/.gitignore
+++ b/.gitignore
@@ -1,37 +1,24 @@
-# Dependencies
 node_modules
-
-# Build outputs
 dist
 dist-ssr
 build
 out
-
-# Environment variables
 .env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
-
-# Editor directories and files
 .vscode/*
 !.vscode/extensions.json
 .idea
 *.sw?
-
-# OS generated files
 Thumbs.db
 .DS_Store
-
-# Logs
 logs
 *.log
-
-# Testing
 coverage
-
-# Temporary files
 *.tmp
 *.temp
 .cache
+*.tsbuildinfo
+.eslintrc.*
