--- a/packages/track-server/package.json
+++ b/packages/track-server/package.json
@@ -43,7 +43,10 @@
     "ts-jest": "^29.2.5",
     "ts-loader": "^9.5.2",
     "ts-node": "^10.9.2",
-    "tsconfig-paths": "^4.2.0"
+    "tsconfig-paths": "^4.2.0",
+    "typescript": "^5.7.3",
+    "typescript-eslint": "^8.20.0",
+    "eslint-plugin-prettier": "^5.2.2"
   },
   "jest": {
     "moduleFileExtensions": [
