--- a/packages/track-server/package.json
+++ b/packages/track-server/package.json
@@ -23,6 +23,13 @@
     "@nestjs/common": "^11.0.1",
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/typeorm": "^11.0.0",
+    "@nestjs/config": "^3.0.0",
+    "@nestjs/schedule": "^4.0.0",
+    "mysql2": "^3.6.0",
+    "redis": "^4.6.0",
+    "class-validator": "^0.14.0",
+    "class-transformer": "^0.5.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
