--- a/packages/track-view/package.json
+++ b/packages/track-view/package.json
@@ -10,7 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^6.1.0",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
     "@reduxjs/toolkit": "^2.11.2",
+    "antd": "^6.2.2",
     "less": "^4.5.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
