--- a/packages/track-view/package.json
+++ b/packages/track-view/package.json
@@ -16,10 +16,13 @@
     "@reduxjs/toolkit": "^2.11.2",
     "antd": "^6.2.2",
     "axios": "^1.13.4",
+    "echarts": "^6.0.0",
+    "echarts-for-react": "^3.0.6",
     "less": "^4.5.1",
     "qs": "^6.14.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-echarts": "^0.1.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.13.0"
   },
