--- a/packages/track-server/package.json
+++ b/packages/track-server/package.json
@@ -20,6 +20,9 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@langchain/core": "^1.1.19",
+    "@langchain/deepseek": "^1.0.8",
+    "@langchain/openai": "^1.2.4",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^3.0.0",
     "@nestjs/core": "^11.0.1",
@@ -29,6 +32,7 @@
     "@nestjs/typeorm": "^11.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "langchain": "^1.2.17",
     "ms": "^2.1.3",
     "mysql2": "^3.16.2",
     "redis": "^4.6.0",
